[gd_scene load_steps=6 format=3 uid="uid://dvx6liqfnkicw"]

[ext_resource type="Script" path="res://Assets/Scenes/Scripts/main_player.gd" id="1_at7f4"]
[ext_resource type="PackedScene" uid="uid://duewkaos2dibb" path="res://Assets/3DObjects/AmongUs.glb" id="1_j25rt"]
[ext_resource type="PackedScene" uid="uid://23365eoul53x" path="res://Assets/Scenes/Menus/pause_menu.tscn" id="3_ewait"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_0xdwb"]
height = 4.0

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_vnfbf"]
radius = 0.379243
height = 1.54199

[node name="MainPlayer" type="CharacterBody3D"]
script = ExtResource("1_at7f4")

[node name="CameraController" type="Node3D" parent="."]

[node name="CameraArea" type="Area3D" parent="CameraController"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3)

[node name="CameraCollision" type="CollisionShape3D" parent="CameraController/CameraArea"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, -1.5)
shape = SubResource("CapsuleShape3D_0xdwb")

[node name="Camera" type="Camera3D" parent="CameraController/CameraArea"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_vnfbf")

[node name="AmongUs" parent="." instance=ExtResource("1_j25rt")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, -0.525, 0)

[node name="PauseMenu" parent="." instance=ExtResource("3_ewait")]
